--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,9 @@
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
