--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ testing
 /coverage
 
 production
-/build
+# /build
 
 misc
 .DS_Store
@@ -18,6 +18,6 @@ misc
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
