--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "countries-list": "^3.0.1",
-    "mdbreact": "^5.2.0",
+    "mdbreact": "^4.6.1",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -21,7 +21,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
